# localgpt

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  deny.toml
.github/: copilot-instructions.md
bridges/cli/: Cargo.toml
bridges/slack/: Cargo.toml
bridges/slack/src/: main.rs
bridges/whatsapp/: Cargo.toml
crates/bridge/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli-tools/: Cargo.toml
crates/cli-tools/src/: browser.rs  lib.rs
crates/core/: Cargo.toml
docs/: Designing a world package format for LocalGPT Gen.md  Designing selection UX for AI-driven 3D editing in Bevy.md  LocalGPT_Ecosystem_Integration_Checklist.md  LocalGPT_Rust_Ecosystem_Integration_Spec.md  README.md  RFC-XDG-Directory-Layout.md  SECURITY-TODO.md  messaging-architecture.md  usd-export.md  world-data-analysis.md
docs/architecture/: LocalGPT_Web_Search_Spec.md  cross-platform-process-isolation.md  spacetimedb-integration-design.md
docs/archived/: LocalGPT_md_Documentation.md
docs/case-studies/: ai-content-filter-immunity.md  code-tools-compliance.md  pricing-comparison.md
docs/ecosystem/: composable-agent-guide.md
docs/mobile/: egui-mobile-support.md
docs/rfcs/: Architecture for a massively multiplayer AI-driven 3D world co-creation platform.md  Architecture for a massively multiplayer AI-driven persistent world platform.md  Interaction paradigms from an alien civilization playbook.md  RFC-Drift-Detection-Reconciliation.md  (+8 more)
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+194 files in other folders)
