[package]
name = "localgpt-bridge-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Slack bridge for LocalGPT"

[dependencies]
localgpt-core = { workspace = true }
localgpt-bridge = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport"] }

# Slack
slack-morphism = { version = "2", features = ["hyper"] }
http = "1"
